0.24.x
    Fixed issues with file descriptors leaking into subprocesses

    Fixed #1568 - createpackage.sh

    Fixed #1571 - Puppet::Util::binary returns incorrect results

    Fixed #1553 - Puppet and Facter cannot both install the plist module into two different locations

    Adjusted hpuxuseradd user provider to confine to HP-UX and fixed HP-UX user provider path regression

    Fixed debug messages in package type - thanks to Todd Zullinger for this fix
    
    Fixed #1566 - changed password property of the user type

    Fixed debug messages in package type

    Updated Red Hat spec file

    Fixes #1455 - Adds HP-UX support for user type

    Fixes #1551 puppetmaster.freshness xmlrpc call returns incorrect type

    Fixes #1554 - Fix exception for undefined hostname

    Fixed #1533 - changed permissions for man directory

    Added daemontools and runit providers for service type

    Added simple rake task for running unit tests

    Added spec Rake task

    Fixed #1526 - Fixed leak in template

    Fixed #1506 - Removed storeconfig duplicate indexes
    
    Fixed #1457 - case insensitive match for error
    
    Fixed #1488 - Moved individual functions out of functions.rb into 
    lib/puppet/parser/functions directory.  New functions should be create     in this directory.

    Fixed #1508 - Added HP-UX package provider

    Fixed #1502 - Fixed poor stored configuration performance

    Fixed #1510 - Storeconfiguration fixed for Rails 2.1

    Add the -P/--ping option to puppetrun, fixes #1501

    Fixed #1394 - Added stored configuration clearing script to /ext
    
    Fixed #1442 - replaced use of Facter for report titling with certname

    Fixed $1456 - add proxy configuration capability to yum repo

    Fixed #1457 - removed confine warning

    A working script to create an OS X pkg out of the Puppet repository

    Fixed #1441 - Updated console colours

    Expose all puppet variables as instance member variables of the template wrapper.